[package]
name = "rnasm"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "rnasm-ast",
    "rnasm-lexer",
    "rnasm-opcode",
    "rnasm-parser",
    "rnasm-report",
    "rnasm-span",
    "rnasm-token",
]

[dependencies]
rnasm-lexer = { path = "rnasm-lexer" }
rnasm-parser = { path = "rnasm-parser" }
rnasm-report = { path = "rnasm-report" }
rnasm-span = { path = "rnasm-span" }
