[package]
name = "rnasm-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5.9"
thiserror = "1.0.40"
rnasm-ast = { path = "../rnasm-ast" }
rnasm-builder = { path = "../rnasm-builder" }
rnasm-opcode = { path = "../rnasm-opcode" }
rnasm-span = { path = "../rnasm-span" }
