[package]
name = "rnasm-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.39"
derive-new = "0.5.9"
nonempty = "0.8.1"
rnasm-ast = { path = "../rnasm-ast" }
rnasm-span = { path = "../rnasm-span" }
rnasm-token = { path = "../rnasm-token" }
